fix logo cut off sub brands

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1313,7 +1313,7 @@ body:not(.button-wrapping) a.button {
     height: $lht;
 
     .sub-brand-logo-1 {
-      padding-right: 1vw;
+      padding-right: 12px;
       position: relative;
       z-index: 2;
       background: #fff;
